WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205397
REGRESSION: 32 Tests Crashing on Mac Debug wk2 with ASSERTION FAILED: m_pendingActivityForEventDispatch
https://bugs.webkit.org/show_bug.cgi?id=205397
Summary
REGRESSION: 32 Tests Crashing on Mac Debug wk2 with ASSERTION FAILED: m_pendi...
Truitt Savell
Reported
2019-12-18 08:24:50 PST
32 tests are crashing on Mac Debug wk2 with ASSERTION FAILED: m_pendingActivityForEventDispatch I am able to reproduced this crash locally by running these tests in iterations. Build:
https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/builds/6469
crash example:
https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r253670%20(6469)/http/wpt/service-workers/ready.https.window-crash-log.txt
I am able to reproduce this on 253667 but not 253666. http/tests/workers/service/ServiceWorkerGlobalScope_clients_SameObject.html [ Crash ] http/tests/workers/service/page-caching.html [ Crash ] http/tests/workers/service/service-worker-download.https.html [ Crash ] http/tests/workers/service/service-worker-registration-gc-event.html [ Crash ] http/wpt/service-workers/ready.https.window.html [ Crash ] http/wpt/service-workers/third-party-cookie.html [ Crash ] http/wpt/service-workers/third-party-registration.html [ Crash ] imported/w3c/web-platform-tests/content-security-policy/worker-src/service-worker-src-self-fallback.https.sub.html [ Crash ] imported/w3c/web-platform-tests/fetch/api/abort/serviceworker-intercepted.https.html [ Crash ] imported/w3c/web-platform-tests/html/webappapis/scripting/processing-model-2/unhandled-promise-rejections/promise-rejection-events.serviceworker.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-storage-keys.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/activation.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/clients-matchall-on-evaluation.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/extendable-event-async-waituntil.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/extendable-event-waituntil.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-canvas-tainting-image-cache.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-after-navigation-within-page.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-async-respond-with.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-respond-with-custom-response.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-throws-after-respond-with.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-within-sw.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-frame-resource.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/fetch-waits-for-activate.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/immutable-prototype-serviceworker.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/indexeddb.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/iso-latin1-header.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/local-url-inherit-controller.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/navigate-window.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/register-same-scope-different-script-url.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/registration-basic.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/registration-scope.https.html [ Crash ] imported/w3c/web-platform-tests/service-workers/service-worker/xhr-response-url.https.html [ Crash ]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-18 08:25:19 PST
<
rdar://problem/58043626
>
Chris Dumez
Comment 2
2019-12-18 08:26:33 PST
Looking.
Chris Dumez
Comment 3
2019-12-18 08:46:29 PST
Committed
r253688
: <
https://trac.webkit.org/changeset/253688
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug