REGRESSION: 32 Tests Crashing on Mac Debug wk2 with ASSERTION FAILED: m_pendingActivityForEventDispatch https://bugs.webkit.org/show_bug.cgi?id=205397 <rdar://problem/58043626>

Unreviewed, fix debug assertion after r253667. The debug assertion is confused because we now use
the HTML5 event loop, which takes care of taking an ActiveDOMObject PendingActivity whenever we
queue an event.

* workers/service/ServiceWorkerRegistration.cpp:
(WebCore::ServiceWorkerRegistration::ServiceWorkerRegistration):
(WebCore::ServiceWorkerRegistration::getNewestWorker const):
(WebCore::ServiceWorkerRegistration::updateStateFromServer):
(WebCore::ServiceWorkerRegistration::queueTaskToFireUpdateFoundEvent):
(WebCore::ServiceWorkerRegistration::stop):
(WebCore::ServiceWorkerRegistration::hasPendingActivity const):
(WebCore::ServiceWorkerRegistration::getNewestWorker): Deleted.
(WebCore::ServiceWorkerRegistration::updatePendingActivityForEventDispatch): Deleted.
* workers/service/ServiceWorkerRegistration.h:

Canonical link: https://commits.webkit.org/218592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253688 268f45cc-cd09-0410-ab3c-d52691b4dbfc